                    Changes made to Pyjamas since 0.7
                    ---------------------------------
 
 * Make pyjsbuild call out to translator.py using subprocess.Popen,
   with a view to adding "build generators" that will create Makefiles,
   scons build files etc.  pyjsbuild should not be doing the job of make,
   and... it's doing the job of make.

 * Fix getWidget problem with HTMLTable under pyjd on Windows (mshtml,
   fixes Issue 493, contributed by Phil Charlesworth
   
 * Add parsing of XML documents under pyjd on Windows (mshtml),
   fixes Issue 481, contributed by Phil Charlesworth
   
 * Add auto-build (file monitoring) option to pyjsbuild, contributed
   by Suzan Shakya.

 * Add pyjscompressor.py from Sujan Shakya to contrib: depends on java
   and google java compressor tool.

 * Series of fixes by W Kornewald: #229, #385, #414, #417, #475 and more.
   accidental exception catching in debug handling sorted; class creation
   uses __class__ on the base (behaves like http://python.org); added
   __delattr__ support; extended tracebacks to include module imports.

 * Fix long-standing bug with DialogBox: use an overlay to capture all
   mouse events.  use same overlay trick in Controls so that slider
   capture now works, too.

 * Enable asynchronous loading of modules during bootstrap for -m build
   flag (pyjs); new controller allows for custom bootsplash/early-user
   javascript code; add bootsplash example.  by C Anthony Risinger

 * Add DOM.createTextNode function, thanks to Jordon Wii

 * Fix issue in GWTCanvas Transparency demo, thanks to Alex Tsepkov

 * Add infrastructure for registering alternative JS functions for
   native javascript inline output, by W Kornewald

 * Added example dynamic CSS stylesheet changer, thanks to Stolati
   for the CSS changing class.

 * Fixes to pyjslib for compatibility with Dean Edwards' JS Packer
   (http://dean.edwards.name/packer/) by Angelo Mottola
